<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_future"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="2dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="?colorPrimary"
            android:textSize="18sp"
            tools:text="Future" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/in_full_version"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textSize="18sp" />

        <dev.ragnarok.fenrir.view.natives.rlottie.RLottieImageView
            android:id="@+id/lottie_animation"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="#FFFFFF"
            android:stateListAnimator="@animator/clicked"
            android:text="@string/go_buy"
            android:textColor="@android:color/black"
            app:icon="@drawable/ic_market_outline"
            app:iconTint="@android:color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_features"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="#FFFFFF"
            android:stateListAnimator="@animator/clicked"
            android:text="@string/features"
            android:textColor="@android:color/black"
            app:icon="@drawable/about_writed"
            app:iconTint="@android:color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_features_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:animateLayoutChanges="true"
            android:ellipsize="end"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textSize="17sp"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>